fix header  z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,8 @@ h2 {
     background: white;
     align-items: center;
     position: fixed;
-    top: 0vh;  
+    top: 0vh;
+    z-index: 1;  
     box-shadow: 0px 2px 10px  rgb(235, 235, 235);
 }
 
